# templatingengine

./: CMakeLists.txt  README.md
include/: LoopClosingToken.h  LoopOpeningToken.h  LoopRenderer.h  MultiValueBase.h  NonStandaloneTokenBase.h  ParameterSet.h  PlainTextRenderer.h  PlainTextToken.h  RendererBase.h  RendererChain.h  RendererChainBuilder.h  SingleValueBase.h  StandaloneTokenBase.h  StringValue.h  Template.h  TemplateTokenizer.h  TokenBlockOpeningBase.h  TokenListBuilder.h  TokenUtils.h  ValueList.h  VariableRenderer.h  VariableToken.h
include/builders/: RendererChainBuilder.h  TokenListBuilder.h
include/dataTypes/: MultiValueBase.h  SingleValueBase.h  StringValue.h  ValueBase.h  ValueHandler.h  ValueList.h
include/renderers/: LoopRenderer.h  PlainTextRenderer.h  RendererChain.h  VariableRenderer.h
include/tokens/: LoopClosingToken.h  LoopOpeningToken.h  NonStandaloneTokenBase.h  PlainTextToken.h  StandaloneTokenBase.h  Token.h  TokenBlockOpeningBase.h  VariableToken.h
include/utils/: EscapeStream.h  TemplateTokenizer.h  TokenUtils.h
src/: EscapeStream.cpp  LoopOpeningToken.cpp  LoopRenderer.cpp  PlainTextRenderer.cpp  PlainTextToken.cpp  RendererChain.cpp  RendererChainBuilder.cpp  StringValue.cpp  Template.cpp  TemplateTokenizer.cpp  TokenListBuilder.cpp  TokenUtils.cpp  ValueBase.cpp  ValueList.cpp  VariableRenderer.cpp  VariableToken.cpp
src/builders/: RendererChainBuilder.cpp  TokenListBuilder.cpp
src/dataTypes/: StringValue.cpp  ValueBase.cpp  ValueHandler.cpp  ValueList.cpp
src/renderers/: LoopRenderer.cpp  PlainTextRenderer.cpp  RendererChain.cpp  VariableRenderer.cpp
src/tokens/: LoopOpeningToken.cpp  PlainTextToken.cpp  VariableToken.cpp
src/utils/: EscapeStream.cpp  TemplateTokenizer.cpp  TokenUtils.cpp
tests/: EscapeStreamTest.cpp  LoopRendererTest.cpp  PlainTextRendererTest.cpp  RendererChainBuilderTest.cpp  RendererChainTest.cpp  TemplateTest.cpp  TemplateTokenizerTest.cpp  TokenListBuilderTest.cpp  TokenUtilsTest.cpp  ValueHandlerTest.cpp  ValueListTest.cpp  VariableRendererTest.cpp
tests/cpp/: EscapeStreamTest.cpp  LoopRendererTest.cpp  PlainTextRendererTest.cpp  RendererChainBuilderTest.cpp  RendererChainTest.cpp  TemplateTest.cpp  TemplateTokenizerTest.cpp  TokenListBuilderTest.cpp  TokenUtilsTest.cpp  ValueHandlerTest.cpp  ValueListTest.cpp  VariableRendererTest.cpp  main.cpp
tests/docker/alpine-clang/: Dockerfile
tests/docker/alpine-gcc/: Dockerfile
tests/docker/centos-clang/: Dockerfile
tests/docker/centos-gcc/: Dockerfile
tests/docker/ubuntu-clang/: Dockerfile
tests/docker/ubuntu-gcc/: Dockerfile
